# quadrotor_simulator_ros

./: .gitattributes  CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
assets/: vehicle.dae
config/: default.rviz
launch/: main.xml
quadrotor_simulator_ros/: quadrotor_simulator_node  quadrotor_simulator_node.py  vehicle_rviz_node  vehicle_rviz_node.py
