<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadrotor_simulator_ros</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper over quadrotor_simulator_py</description>
  <maintainer email="kshitijgoel16061995@gmail.com">kshitijgoel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>quadrotor_simulator_py</depend>
  <depend>quadrotor_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
